--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 <a style="float:right" href="#" id="login">FB login</a>
 <h1>
-	Our Lives:  collective wisdom about lifestyles and activities
+	One Life:  collective wisdom about lifestyles and activities
 	<br>
 	<button onclick="lifestyles_index()">Tell us about a lifestyle</button>
 	<button onclick="activities_index()">Tell us about an activity</button>
@@ -16,11 +16,23 @@
 <div id="about" class="page" style="max-width: 500px; font-size: 14px; line-height: 1.4; color: #444; margin-left: 10px;">
 	<h2>About this site</h2>
 
-	<p>Our Lives is a calendar app, a database about how people have spent their time and which of it was well-spent, and a community site for living with satisfaction.
-
 	<p>Our mission is to organize all the links on the internet -- apps, videos, websites, products, etc -- by what activities they helped people with and whether people are glad they did those activities in the end.  We dream of an internet that leads to lives of satisfaction.
 
+	<p>As such we have a calendar app, a database about how people have spent their time and which of it was well-spent, and a community site for living with satisfaction.
+
 	<p><b>Partners:</b>  We're looking for partners that have confirmed info about video watches, app downloads and usage, product purchases, etc.  We'd like to survey your users about how they feel about these engagements in the long run, and give the data back to you with annotations to make better recommendations.  Contact <a href="http://nxhx.org">Joe</a>.
+
+	<p><b>Coverage Goals:</b>  our M1 goal for coverage in the English-speaking world is the following:
+
+	<ul>
+		<li>1000 top websites x 100 users
+		<li>1000 top apps x 10 users
+		<li>1000 top venues x 5 top app-using cities x 10 users
+		<li>5000 top social activities x 10 users
+		<li>100 psychographics / sociographics / lifestyles
+	</ul>
+
+	<p>(*) If the average user rates 5 websites, 2 apps, 5 activities, or 5 venues, then ~20k reflective users will suffice.
 </div>
 
 
