--- a/index.html
+++ b/index.html
@@ -1,13 +1,11 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
-<a style="float:right" href="#" id="login">FB login</a>
+<a style="float:right; color: #82E5E9;" href="#" id="login">FB login</a>
 <h1>
 	One Life: collective wisdom about how to spend your time on earth
 	<br>
 	<button onclick="cities_index()">Cities</button>
-	<button onclick="identities_index()">Goals</button>
-	<button onclick="activities_index()">Activities</button>
 	<button onclick="links_index()">Resources</button>
-	<button onclick="my_profile()">You</button>
+	<button onclick="my_profile()">My profile</button>
 	<button onclick="activities_graph()">Graphs</button>
 	<button onclick="about()">About</button>
 </h1>
@@ -49,12 +47,12 @@
 </div>
 
 <div id="links" class="page">
-	<h3>Choose a resource...</h3>
+	<h3>Choose a website, app, video, or venue:</h3>
 	<ul>
 		<div id="links_list" class="fbobjlist">
 			<li><b data-set="text:name"></b> (<span data-set="text:type"></span>)</li>
 		</div>
-		<form><input placeholder="Add a link..." id="link_adder" class="simple_input"><input type="submit"></form>
+		<form><input placeholder="Add by URL..." id="link_adder" class="simple_input"><input type="submit"></form>
 	</ul>
 </div>
 
@@ -180,29 +178,29 @@
 
 <div id="link" class="page">
 	<h2 class="simple_label" id="link_name"></h3>
-	<h4>a link</h4>
+	<h4 id="link_type" class="simple_label">a link</h4>
 
-	<h3>I use this resource for...</h3>
-	<form class="tablist">
+	<h3 style="margin-top: 26px;">Uses of <b id="link_name_again" class="simple_label"></b> <i style="font-variant:small-caps; margin-left:10px; color:#777">(select one)</i></h3>
+	<form class="taglist">
 		<span id="link_activity_chooser" class="fbtablist"><b data-set="text:name"></b></span>
 		<input placeholder="add an activity" id="link_activity_adder" class="fbtypeahead">
 		<input type="submit">
 	</form>
 
 	<div id="link_activity_subpage" class="subpage" style="display:none">
-		<h3>and thus for feeling or being...</h3>
-		<ul>
-			<div  id="link_activity_identities_list" class="fbobjlist"> <li data-set="text:name"></li> </div>
-			<form><input placeholder="into feeling..." id="link_activity_identities_adder" class="fbtypeahead"><input class="submit" type="submit"></form>	
-		</ul>
+		<h3>When we're <b id="link_activity_subpage_label" class="simple_label"></b>, we want to be/feel:</h3>
+		<form class="taglist">
+			<span id="link_activity_identities_list" class="fbobjlist"> <b data-set="text:name"></b> </span>
+			<input placeholder="add a feeling" id="link_activity_identities_adder" class="fbtypeahead">
+			<input class="submit" type="submit">
+		</form>
 
-		<h3>Recommended activities</h3>
-		<div id="recommended_activities" class="fbobjlist">
+		<h3>Alternatives</h3>
+		<ul id="recommended_activities" class="fbobjlist">
 			<li>
-				<b data-set="text:related_activity_name">Activity</b> &mdash;
-					better for <i data-set="text:name"></i>?
+				For feeling <i data-set="text:name"></i>, also try <b data-set="text:related_activity_name">Activity</b>
 			</li>
-		</div>
+		</ul>
 	</div>
 </div>
 
@@ -211,9 +209,9 @@
 
 <div id="identity" class="page">
 	<h2 class="simple_label" id="identity_name"></h3>
-	<h4>something people are into feeling</h4>
+	<h4>a thing we want to be or feel</h4>
 
-	<h3>Activities people do who are into feeling this way</h3>
+	<h3>Activities for being/feeling this way</h3>
 	<ul>
 		<div id="identity_activities_list" class="fbobjlist">
 			<li data-set="text:name"></li>
@@ -242,28 +240,28 @@
 	<h4>a person</h4>
 
 	<h3>Cities I've lived in</h3>
-	<ul>
-		<div id="user_cities_list" class="fbobjlist">
-			<li data-set="text:name"></li>
-		</div>
-		<form><input placeholder="Add a goal..." id="user_cities_adder" class="fbtypeahead"><input type="submit"></form>
-	</ul>
+	<form class="taglist">
+		<span id="user_cities_list" class="fbobjlist">
+			<b data-set="text:name"></b>
+		</span>
+		<input placeholder="Add a city..." id="user_cities_adder" class="fbtypeahead"><input type="submit">
+	</form>
 
-	<h3>Old identities</h3>
-	<ul>
-		<div id="user_old_goals_list" class="fbobjlist">
-			<li data-set="text:name"></li>
-		</div>
-		<form><input placeholder="Add a goal..." id="user_old_goals_adder" class="fbtypeahead"><input type="submit"></form>
-	</ul>
+	<h3>I used to want to be</h3>
+	<form class="taglist">
+		<span id="user_old_goals_list" class="fbobjlist">
+			<b data-set="text:name"></b>
+		</span>
+		<input placeholder="Add a goal..." id="user_old_goals_adder" class="fbtypeahead"><input type="submit">
+	</form>
 
-	<h3>New identities</h3>
-	<ul>
-		<div id="user_new_goals_list" class="fbobjlist">
-			<li data-set="text:name"></li>
-		</div>
-		<form><input placeholder="Add a goal..." id="user_new_goals_adder" class="fbtypeahead"><input type="submit"></form>
-	</ul>
+	<h3>But now I want to be</h3>
+	<form class="taglist">
+		<span id="user_new_goals_list" class="fbobjlist">
+			<b data-set="text:name"></b>
+		</span>
+		<input placeholder="Add a goal..." id="user_new_goals_adder" class="fbtypeahead"><input type="submit">
+	</form>
 </div>
 
 
