--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 <a style="float:right; color: #82E5E9;" href="#" id="login">FB login</a>
 <h1>
-	One Life: collective wisdom about how to spend your time on earth
+	One Life: collective wisdom about how we've spent our time on earth
 	<br>
 	<button onclick="cities_index()">Cities</button>
 	<button onclick="links_index()">Resources</button>
