--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<title>One Life Left</title>
 <link rel="stylesheet" type="text/css" href="styles.css">
 <a style="float:right; color: #82E5E9;" href="#" id="login">FB login</a>
 <h1>
@@ -91,46 +92,6 @@
 <!-- detail pages -->
 
 
-<div id="lifestyle" class="page">
-	<h2 class="simple_label" id="lifestyle_name"></h3>
-	<h4>a lifestyle</h4>
-	<ul>
-	<li>
-		I've lived this...
-		<select id="lifestyle_testimony" class="fbselect">
-			<option value="">Never</option>
-			<option>A few months</option>
-			<option>A year</option>
-			<option>Several years</option>
-		</select>
-	</li>
-	</ul>
-
-
-	<h3>What <b>activities</b> are part of this lifestyle?</h3>
-	<form>
-	<ul>
-		<div id="activities_list" class="fbobjlist">
-			<li data-set="text:name"></li>
-		</div>
-		<input placeholder="Add an activity..." id="activity_adder" class="fbtypeahead"><input type="submit">
-	</ul>	
-	</form>
-
-
-	<h3>In which <b>cities</b> is this lifestyle popular?</h3>
-	<ul>
-		<div  id="cities_list" class="fbobjlist">
-			<li data-set="text:name"></li>
-		</div>
-		<form><input placeholder="Add a city..." id="lifestyle_city_adder" class="fbtypeahead"><input class="submit" type="submit"></form>
-	</ul>
-
-	<h3>These <b>people</b> have tried this lifestyle</h3>
-	<div id="users_list" class="fbobjlist"> <img data-set="src:fbphoto"> </div>
-</div>
-
-
 
 <div id="activity" class="page">
 	<h2 class="simple_label" id="activity_name"></h3>
@@ -177,10 +138,10 @@
 
 
 <div id="link" class="page">
-	<h2 class="simple_label" id="link_name"></h3>
+	<h2 class="simple_label link_name"></h3>
 	<h4 id="link_type" class="simple_label">a link</h4>
 
-	<h3 style="margin-top: 26px;">Uses of <b id="link_name_again" class="simple_label"></b> <i style="font-variant:small-caps; margin-left:10px; color:#777">(select one)</i></h3>
+	<h3 style="margin-top: 26px;">Uses of <b class="simple_label link_name"></b> <i>select one</i></h3>
 	<form class="taglist">
 		<span id="link_activity_chooser" class="fbtablist"><b data-set="text:name"></b></span>
 		<input placeholder="add an activity" id="link_activity_adder" class="fbtypeahead">
@@ -188,17 +149,38 @@
 	</form>
 
 	<div id="link_activity_subpage" class="subpage" style="display:none">
-		<h3>Some things we want to be/feel when we're <b id="link_activity_subpage_label" class="simple_label"></b>:</h3>
-		<form class="taglist">
-			<span id="link_activity_identities_list" class="fbobjlist"> <b data-set="text:name"></b> </span>
-			<input placeholder="add a feeling" id="link_activity_identities_adder" class="fbtypeahead">
-			<input class="submit" type="submit">
-		</form>
-
-		<h3>Alternatives</h3>
-		<ul id="recommended_activities" class="fbobjlist">
+		<h3>for <b class="simple_label link_activity_subpage_label"></b></h3>
+		<ul class="light">
 			<li>
-				For being <i data-set="text:name"></i>, also try <b data-set="text:related_activity_name">Activity</b>
+				I 
+				<select id="link_activity_good_resource" class="fbselect">
+					<option value="">would</option>
+					<option>would not</option>
+				</select>
+				recommend
+				<b class="simple_label link_name"></b>
+			</li>
+
+			<li> <b class="simple_label link_activity_subpage_label"></b> is about getting:
+			<ul><li><form class="taglist" style="display: inline">
+				<span id="link_activity_identities_list" class="fbobjlist"> <b data-set="text:name"></b> </span>
+				<input placeholder="add a feeling" id="link_activity_identities_adder" class="fbtypeahead">
+				<input class="submit" type="submit">
+			</form></li></ul>
+			</li>
+
+			<li>
+			Alternatives to <b class="simple_label link_activity_subpage_label"></b>
+			<ul id="recommended_activities" class="fbobjlist">
+				<li>
+					For being <i data-set="text:name"></i>, try <b data-set="text:related_activity_name">Activity</b>
+				</li>
+			</ul>
+			</li>
+
+			<li>
+			Alternatives to <b class="simple_label link_name"></b>
+			<ul><li>Coming soon</li></ul>
 			</li>
 		</ul>
 	</div>
